--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -234,21 +234,29 @@ firebase.auth().onAuthStateChanged(function(user) {
     let answeredQuestions = [];
     let userAnswers = {}; // Objeto para armazenar as respostas do usuário
     let speechSynthesisUtterance = null;
-
-    async function loadQuestions() {
+async function loadQuestions() {
+    // Obtém os parâmetros level e unit da URL
     const { level, unit } = getLevelAndUnitFromURL();
+
+    // Adicione os logs para verificar level e unit
+    console.log("Level:", level);
+    console.log("Unit:", unit);
 
     if (!level || !unit) {
         console.error("Level or Unit not identified in the URL.");
         return;
     }
 
+    // Gera o caminho dinâmico baseado no level e unit
     const questionsPath = `../../${level}/${unit}/DataQuiz/questions.txt`;
+
+    // Adicione o log para verificar o caminho gerado
+    console.log("Generated Path:", questionsPath);
 
     try {
         const response = await fetch(questionsPath);
         if (!response.ok) throw new Error(`Failed to fetch questions from ${questionsPath}`);
-
+        
         const text = await response.text();
         const lines = text.split('\n');
         let currentQuestion = null;
@@ -516,13 +524,18 @@ function speakText(text, voice, buttonElement, index) {
         return params.get('fase'); 
     }
 
-    function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        const level = parts[1];
-        const unit = parts[2];
-        return { level, unit };
-    }
+  function getLevelAndUnitFromURL() {
+    const params = new URLSearchParams(window.location.search);
+    const level = params.get('level');
+    const unit = params.get('unit');
+
+    // Adicione os logs para verificar level e unit
+    console.log("Extracted Level from URL:", level);
+    console.log("Extracted Unit from URL:", unit);
+
+    return { level, unit };
+}
+
 async function handleBackButtonClick() {
     const { level, unit } = getLevelAndUnitFromURL(); // Função existente no código.
 
