--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -574,6 +574,26 @@ async function checkPhaseProgress(uid, level, unit) {
     }
 }
 
+function readQuestion() {
+    stopReading(); // Cancela qualquer leitura anterior
+    const questionText = document.getElementById('question-text').innerText;
+
+    if (!('speechSynthesis' in window)) {
+        alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
+        return;
+    }
+
+    const utterance = new SpeechSynthesisUtterance(questionText);
+    utterance.lang = 'en-US';
+    window.speechSynthesis.speak(utterance);
+}
+
+function stopReading() {
+    if (window.speechSynthesis.speaking) {
+        window.speechSynthesis.cancel();
+    }
+}
+
     function generatePDF() {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
