--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -276,14 +276,14 @@ async function loadQuestions() {
         });
 
         if (currentQuestion) {
-            questions.push(currentQuestion);
-        }
-
-        answeredQuestions = new Array(questions.length).fill(false);
-        displayQuestion();
-    } catch (error) {
-        console.error("Error loading questions:", error);
+        questions.push(currentQuestion);
     }
+
+    answeredQuestions = new Array(questions.length).fill(false);
+    displayQuestion();
+
+    // Log para verificar as perguntas carregadas
+    console.log("Loaded Questions:", questions);
 }
 
    function displayQuestion() {
@@ -328,6 +328,7 @@ async function loadQuestions() {
 
     function showNextQuestion() {
         hideGIF();
+        console.log("Before Next Question:", currentQuestionIndex);
         if (currentQuestionIndex < questions.length - 1) {
             currentQuestionIndex++;
             displayQuestion();
@@ -336,6 +337,7 @@ async function loadQuestions() {
 
     function showPreviousQuestion() {
         hideGIF();
+        console.log("Before Previous Question:", currentQuestionIndex);
         if (currentQuestionIndex > 0) {
             currentQuestionIndex--;
             displayQuestion();
@@ -539,6 +541,9 @@ function speakText(text, voice, buttonElement, index) {
 async function handleBackButtonClick() {
     const { level, unit } = getLevelAndUnitFromURL(); // Função existente no código.
 
+// Log para verificar level e unit
+    console.log("Checking progress for level:", level, "unit:", unit);
+
     if (!level || !unit) {
         alert("Level or Unit not identified in the URL.");
         return;
@@ -575,6 +580,7 @@ async function checkPhaseProgress(uid, level, unit) {
 }
 
 function readQuestion() {
+    console.log("Reading question...");
     stopReading(); // Cancela qualquer leitura anterior
     const questionText = document.getElementById('question-text').innerText;
 
@@ -589,6 +595,7 @@ function readQuestion() {
 }
 
 function stopReading() {
+    console.log("Stopping reading...");
     if (window.speechSynthesis.speaking) {
         window.speechSynthesis.cancel();
     }
