--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -276,14 +276,17 @@ async function loadQuestions() {
         });
 
         if (currentQuestion) {
-        questions.push(currentQuestion);
+            questions.push(currentQuestion);
+        }
+
+        answeredQuestions = new Array(questions.length).fill(false);
+        displayQuestion();
+
+        // Log para verificar as perguntas carregadas
+        console.log("Loaded Questions:", questions);
+    } catch (error) {
+        console.error("Error loading questions:", error);
     }
-
-    answeredQuestions = new Array(questions.length).fill(false);
-    displayQuestion();
-
-    // Log para verificar as perguntas carregadas
-    console.log("Loaded Questions:", questions);
 }
 
    function displayQuestion() {
