--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -402,7 +402,7 @@ function toggleButtons(state) {
         gifContainer.style.display = 'none';
     }
 
-    function toggleSpeech(text, buttonElement, index) {
+  function toggleSpeech(text, buttonElement, index) {
     if (!('speechSynthesis' in window)) {
         alert("Your browser does not support speech synthesis. Please enable it or use a compatible browser.");
         return;
@@ -417,32 +417,27 @@ function toggleButtons(state) {
         let usVoice = voices.find(voice => voice.lang === 'en-US');
 
         if (!usVoice && voices.length === 0) {
+            // Se não houver vozes disponíveis, configure o evento para buscar as vozes posteriormente
             window.speechSynthesis.onvoiceschanged = () => {
                 voices = window.speechSynthesis.getVoices();
                 usVoice = voices.find(voice => voice.lang === 'en-US');
 
                 if (!usVoice && !alertDisplayed) {
-                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
+                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
                     alertDisplayed = true;
                 }
 
-                if (usVoice) {
-                    speakText(text, usVoice, buttonElement, index);
-                } else {
-                    speakText(text, voices[0], buttonElement, index);
-                }
+                speakText(text, usVoice || voices[0], buttonElement, index);
             };
         } else {
             if (!usVoice && !alertDisplayed) {
                 alert("No 'en-US' voice found. Using default voice instead.");
                 alertDisplayed = true;
             }
-            if (usVoice) {
-                speakText(text, usVoice, buttonElement, index);
-            } else {
-                speakText(text, voices[0], buttonElement, index);
-            }
+
+            speakText(text, usVoice || voices[0], buttonElement, index);
         }
+
         buttonElement.src = 'pause.png';
     }
 }
