--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -405,7 +405,7 @@
                         window.history.back();
                     } else {
                         const confirmExit = confirm(
-                            "You have not completed this phase. Do you want to go back anyway?"
+                            "You have not completed this phase. "
                         );
                         if (confirmExit) {
                             window.history.back();
