--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -214,7 +214,7 @@
         async function loadWords() {
             try {
                 const { level, unit } = getLevelAndUnitFromURL();
-                const response = await fe
+                const response = await fetch(`../../${level}/${unit}/data1/words.txt`);
                 const text = await response.text();
                 return text.split('\n').filter(word => word.trim() !== '').map(word => word.trim());
             } catch (error) {
@@ -245,7 +245,7 @@
                 cardFront.classList.add('card-front');
                 const img = document.createElement('img');
                 const { level, unit } = getLevelAndUnitFromURL();
-                img.src = `../ndex + 1}.png`;
+                img.src = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
                 img.onerror = function() {
                     console.error(`Erro ao carregar a imagem: imagem${index + 1}.png`);
                 };
