--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -244,11 +244,11 @@
                 const cardFront = document.createElement('div');
                 cardFront.classList.add('card-front');
                 const img = document.createElement('img');
-                const { level, unit } = getLevelAndUnitFromURL();
-                img.src = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
-                img.onerror = function() {
-                    console.error(`Erro ao carregar a imagem: imagem${index + 1}.png`);
-                };
+               const { level, unit } = getLevelAndUnitFromURL();
+img.src = `../../../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
+img.onerror = function() {
+    console.error(`Erro ao carregar a imagem: ${img.src}`);
+};
                 cardFront.appendChild(img);
 
                 const cardBack = document.createElement('div');
