--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -380,12 +380,15 @@
         }
 
         function getLevelAndUnitFromURL() {
-            const url = window.location.pathname;
-            const parts = url.split('/');
-            const level = parts[1];
-            const unit = parts[2];
-            return { level, unit };
-        }
+    const url = window.location.pathname;
+    const parts = url.split('/');
+    const level = parts[1];
+    const unit = parts[2];
+    console.log("URL:", url);
+    console.log("Parts:", parts);
+    console.log("Level:", level, "Unit:", unit);
+    return { level, unit };
+}
 
         async function handleBackButtonClick() {
             const { level, unit } = getLevelAndUnitFromURL();
