--- a/Atividades/Flashcards/index.html
+++ b/Atividades/Flashcards/index.html
@@ -383,14 +383,17 @@
             return params.get('fase');
         }
 
-        function getLevelAndUnitFromURL() {
-    const url = window.location.pathname;
-    const parts = url.split('/');
-    const level = parts[1];
-    const unit = parts[2];
-    console.log("URL:", url);
-    console.log("Parts:", parts);
-    console.log("Level:", level, "Unit:", unit);
+       function getLevelAndUnitFromURL() {
+    const params = new URLSearchParams(window.location.search);
+    const level = params.get('level'); // Obtém o nível da query string
+    const unit = params.get('unit');  // Obtém a unidade da query string
+    
+    if (!level || !unit) {
+        console.error("Level ou Unit não encontrados na URL");
+        return { level: '', unit: '' }; // Retorna valores padrão para evitar erros
+    }
+    
+    console.log("Level:", level, "Unit:", unit); // Para depuração
     return { level, unit };
 }
 
